# mahjong-etl

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  extractor.py  main.py  pyproject.toml  random_pailist.py  run_extractor.sh  run_scraper.sh  scrape.py  upload.sh
er/: mahjong.md
