[tool.poetry]
name = "mahjong-etl"
version = "0.1.0"
description = "mahjong score analysis"
authors = ["kackyt <t.kakizaki@adacotech.co.jp>"]
readme = "README.md"
packages = [{include = "mahjong_etl"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pyarrow = "^14.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"


[tool.poetry.group.types.dependencies]
types-requests = "^2.31.0.10"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
